myapp-chart/templates/nfs-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: mytask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: sharedvolume/nfs-server:latest
        securityContext:
          privileged: true
        ports:
        - containerPort: 2049
          name: nfs
        - containerPort: 111
          name: rpcbind
        volumeMounts:
        - name: nfs-storage
          mountPath: /nfs
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: mytask
spec:
  selector:
    app: nfs-server
  ports:
  - name: nfs
    port: 2049
    targetPort: 2049
  - name: rpcbind
    port: 111
    targetPort: 111
  type: ClusterIP
